Fix overflow text wrapping: edjs-warning-message

--- a/styles/edjs.css
+++ b/styles/edjs.css
@@ -42,6 +42,7 @@ h3.edjs-header {
 .edjs-warning-message {
   padding-left: 1.2rem;
   font-size: 0.95rem;
+  overflow-wrap: anywhere;
 }
 
 ol.edjs-list {
@@ -149,7 +150,7 @@ ul.edjs-list {
   }
 
   .edjs-warning-box {
-    width: 90%;
+    width: 95%;
     margin: 1rem auto;
     padding: 0.75rem 1rem;
     border-width: 2px;
@@ -165,10 +166,7 @@ ul.edjs-list {
   .edjs-warning-message {
     padding-left: 1.2rem;
     font-size: 1rem;
-  }
-
-  .edjs-warning-message {
-    padding-left: 1.5rem;
+    overflow-wrap: anywhere;
   }
 
   .edjs-list-ul {
